// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Author should render Default 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: grid;
  gap: 24px;
}

.emotion-2 {
  margin: 0;
  font-family: "Roboto","Helvetica","Arial",sans-serif;
  font-weight: 400;
  font-size: 3rem;
  line-height: 1.167;
  letter-spacing: 0em;
}

.emotion-3 {
  margin: 0;
  font-family: "Roboto","Helvetica","Arial",sans-serif;
  font-weight: 400;
  font-size: 1.5rem;
  line-height: 1.334;
  letter-spacing: 0em;
}

.emotion-4 {
  max-width: 100%;
  height: auto;
  aspect-ratio: auto 0.6666666666666666;
  max-height: 80lvh;
  object-fit: contain;
  width: 100%;
  max-width: 500px;
}

.emotion-6 {
  display: grid;
  grid-auto-columns: max-content;
  grid-auto-flow: column;
  gap: 16px;
}

.emotion-8 {
  margin: 0;
  font: inherit;
  color: #1976d2;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-decoration-color: rgba(25, 118, 210, 0.4);
}

.emotion-8:hover {
  text-decoration-color: inherit;
}

.emotion-13 {
  margin: 0;
  font-family: "Roboto","Helvetica","Arial",sans-serif;
  font-weight: 400;
  font-size: 2.125rem;
  line-height: 1.235;
  letter-spacing: 0.00735em;
}

.emotion-15 {
  margin: 0;
  font-family: "Roboto","Helvetica","Arial",sans-serif;
  font-weight: 500;
  font-size: 1.25rem;
  line-height: 1.6;
  letter-spacing: 0.0075em;
}

.emotion-16 {
  margin: 0;
  font-family: "Roboto","Helvetica","Arial",sans-serif;
  font-weight: 400;
  font-size: 1rem;
  line-height: 1.5;
  letter-spacing: 0.00938em;
  margin-bottom: 0.35em;
}

.emotion-17 {
  border-collapse: collapse;
}

.emotion-18 {
  border-collapse: collapse;
  border: 1px solid #000000;
}

<article
    class="emotion-0 emotion-1"
  >
    <header>
      <h1
        class="MuiTypography-root MuiTypography-h3 emotion-2"
      >
        Foobar
      </h1>
      <aside
        class="MuiTypography-root MuiTypography-h5 emotion-3"
      >
        Editor
      </aside>
    </header>
    <img
      alt="DSC07717"
      class="emotion-4 emotion-5"
      loading="lazy"
      srcset="https://unsplash.it/800/400 800w,
https://unsplash.it/500/300 500w,
https://unsplash.it/300/200 300w,
https://unsplash.it/200/100 200w"
      title=""
    />
    <aside
      class="emotion-6 emotion-7"
    >
      <a
        class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways emotion-8"
        href="https://twitter.com"
        target="__blank"
      >
        Twitter
      </a>
      <a
        class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways emotion-8"
        href="https://facebook.com"
        target="__blank"
      >
        Facebook
      </a>
      <a
        class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways emotion-8"
        href="https://instagram.com"
        target="__blank"
      >
        Instagram
      </a>
    </aside>
    <div
      class="emotion-11 emotion-12"
    >
      <div
        data-gramm="false"
        data-slate-editor="true"
        data-slate-node="value"
        style="outline: none; white-space: pre-wrap; word-wrap: break-word;"
      >
        <h2
          class="MuiTypography-root MuiTypography-h4 emotion-13"
          data-slate-node="element"
        >
          <span
            data-slate-node="text"
          >
            <span
              data-slate-string="true"
            >
              Title
            </span>
          </span>
        </h2>
        <h3
          class="MuiTypography-root MuiTypography-h5 emotion-3"
          data-slate-node="element"
        >
          <span
            data-slate-node="text"
          >
            <span
              data-slate-string="true"
            >
              Title 2
            </span>
          </span>
        </h3>
        <h4
          class="MuiTypography-root MuiTypography-h6 emotion-15"
          data-slate-node="element"
        >
          <span
            data-slate-node="text"
          >
            <span
              data-slate-string="true"
            >
              Title 3
            </span>
          </span>
        </h4>
        <ul
          data-slate-node="element"
        >
          <li
            data-slate-node="element"
          >
            <span
              data-slate-node="text"
            >
              <span
                data-slate-string="true"
              >
                Unordered List
              </span>
            </span>
          </li>
        </ul>
        <ol
          data-slate-node="element"
        >
          <li
            data-slate-node="element"
          >
            <span
              data-slate-node="text"
            >
              <span
                data-slate-string="true"
              >
                Ordered List
              </span>
            </span>
          </li>
        </ol>
        <p
          class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom emotion-16"
          data-slate-node="element"
        >
          <span
            data-slate-node="text"
          >
            <span
              data-slate-length="0"
              data-slate-zero-width="n"
            >
              ﻿
              <br />
            </span>
          </span>
        </p>
        <table
          class="emotion-17"
        >
          <tbody
            data-slate-node="element"
          >
            <tr
              data-slate-node="element"
            >
              <td
                class="emotion-18"
                data-slate-node="element"
              >
                <p
                  class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom emotion-16"
                  data-slate-node="element"
                >
                  <span
                    data-slate-node="text"
                  >
                    <span
                      data-slate-string="true"
                    >
                      Table Cell 1
                    </span>
                  </span>
                </p>
              </td>
              <td
                class="emotion-18"
                data-slate-node="element"
              >
                <p
                  class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom emotion-16"
                  data-slate-node="element"
                >
                  <span
                    data-slate-node="text"
                  >
                    <span
                      data-slate-string="true"
                    >
                      Table Cell 2
                    </span>
                  </span>
                </p>
              </td>
            </tr>
            <tr
              data-slate-node="element"
            >
              <td
                class="emotion-18"
                data-slate-node="element"
              >
                <p
                  class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom emotion-16"
                  data-slate-node="element"
                >
                  <span
                    data-slate-node="text"
                  >
                    <span
                      data-slate-string="true"
                    >
                      Table Cell 3
                    </span>
                  </span>
                </p>
              </td>
              <td
                class="emotion-18"
                data-slate-node="element"
              >
                <p
                  class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom emotion-16"
                  data-slate-node="element"
                >
                  <span
                    data-slate-node="text"
                  >
                    <span
                      data-slate-string="true"
                    >
                      Table Cell 4
                    </span>
                  </span>
                </p>
              </td>
            </tr>
          </tbody>
        </table>
        <p
          class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom emotion-16"
          data-slate-node="element"
        >
          <span
            data-slate-node="text"
          >
            <span
              data-slate-string="true"
            >
              Normal text,
            </span>
          </span>
          <span
            data-slate-node="text"
          >
            <strong
              data-slate-leaf="true"
            >
              <span
                data-slate-string="true"
              >
                 Bold
              </span>
            </strong>
          </span>
          <span
            data-slate-node="text"
          >
            <span
              data-slate-string="true"
            >
              , 
            </span>
          </span>
          <span
            data-slate-node="text"
          >
            <em
              data-slate-leaf="true"
            >
              <span
                data-slate-string="true"
              >
                Italic
              </span>
            </em>
          </span>
          <span
            data-slate-node="text"
          >
            <span
              data-slate-string="true"
            >
              , 
            </span>
          </span>
          <span
            data-slate-node="text"
          >
            <u
              data-slate-leaf="true"
            >
              <span
                data-slate-string="true"
              >
                Underline
              </span>
            </u>
          </span>
          <span
            data-slate-node="text"
          >
            <span
              data-slate-string="true"
            >
              , 
            </span>
          </span>
          <span
            data-slate-node="text"
          >
            <del
              data-slate-leaf="true"
            >
              <span
                data-slate-string="true"
              >
                Strikethrough
              </span>
            </del>
          </span>
          <span
            data-slate-node="text"
          >
            <span
              data-slate-string="true"
            >
              , 
            </span>
          </span>
          <span
            data-slate-node="text"
          >
            <sup
              data-slate-leaf="true"
            >
              <span
                data-slate-string="true"
              >
                Sup
              </span>
            </sup>
          </span>
          <span
            data-slate-node="text"
          >
            <span
              data-slate-string="true"
            >
              , 
            </span>
          </span>
          <span
            data-slate-node="text"
          >
            <sub
              data-slate-leaf="true"
            >
              <span
                data-slate-string="true"
              >
                Sub
              </span>
            </sub>
          </span>
          <span
            data-slate-node="text"
          >
            <span
              data-slate-string="true"
            >
              , 
            </span>
          </span>
          <a
            class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways emotion-8"
            data-slate-node="element"
            href="https://google.com"
            rel="noreferrer"
            target="_blank"
            title="Link"
          >
            <span
              data-slate-node="text"
            >
              <span
                data-slate-string="true"
              >
                Link
              </span>
            </span>
          </a>
          <span
            data-slate-node="text"
          >
            <span
              data-slate-string="true"
            >
              , 😀
            </span>
          </span>
        </p>
      </div>
    </div>
  </article>
</DocumentFragment>
`;

exports[`Author should render WithClassName 1`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -1,8 +1,8 @@
  <DocumentFragment>
    <article
-     class="css-15it3wn-AuthorWrapper e18ssx8j1"
+     class="extra-classname css-15it3wn-AuthorWrapper e18ssx8j1"
    >
      <header>
        <h1
          class="MuiTypography-root MuiTypography-h3 css-gepadz-MuiTypography-root"
        >"
`;

exports[`Author should render WithCustomAuthorLinks 1`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -22,35 +22,77 @@
  https://unsplash.it/500/300 500w,
  https://unsplash.it/300/200 300w,
  https://unsplash.it/200/100 200w"
        title=""
      />
-     <aside
-       class="css-xraw1t-AuthorLinksWrapper e18ssx8j0"
+     <div
+       class="MuiBox-root css-13333fs"
      >
        <a
          class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways css-1xylxj1-MuiTypography-root-MuiLink-root"
          href="https://twitter.com"
          target="__blank"
+         title="Twitter"
        >
-         Twitter
+         <svg
+           height="24"
+           style="justify-self: center;"
+           viewBox="0 0 100 100"
+           width="24"
+           xmlns="http://www.w3.org/2000/svg"
+         >
+           <circle
+             cx="50"
+             cy="50"
+             fill="#000"
+             r="50"
+           />
+         </svg>
        </a>
        <a
          class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways css-1xylxj1-MuiTypography-root-MuiLink-root"
          href="https://facebook.com"
          target="__blank"
+         title="Facebook"
        >
-         Facebook
+         <svg
+           height="24"
+           style="justify-self: center;"
+           viewBox="0 0 100 100"
+           width="24"
+           xmlns="http://www.w3.org/2000/svg"
+         >
+           <circle
+             cx="50"
+             cy="50"
+             fill="#000"
+             r="50"
+           />
+         </svg>
        </a>
        <a
          class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways css-1xylxj1-MuiTypography-root-MuiLink-root"
          href="https://instagram.com"
          target="__blank"
+         title="Instagram"
        >
-         Instagram
+         <svg
+           height="24"
+           style="justify-self: center;"
+           viewBox="0 0 100 100"
+           width="24"
+           xmlns="http://www.w3.org/2000/svg"
+         >
+           <circle
+             cx="50"
+             cy="50"
+             fill="#000"
+             r="50"
+           />
+         </svg>
        </a>
-     </aside>
+     </div>
      <div
        class="css-1v4yto8-RichTextBlockWrapper eu4zjs90"
      >
        <div
          data-gramm="false""
`;

exports[`Author should render WithEmotion 1`] = `
"Snapshot Diff:
Compared values have no visual difference."
`;

exports[`Author should render WithError 1`] = `
"Snapshot Diff:
- First value
+ Second value

- <DocumentFragment>
-   <article
-     class="css-15it3wn-AuthorWrapper e18ssx8j1"
-   >
-     <header>
-       <h1
-         class="MuiTypography-root MuiTypography-h3 css-gepadz-MuiTypography-root"
-       >
-         Foobar
-       </h1>
-       <aside
-         class="MuiTypography-root MuiTypography-h5 css-ag7rrr-MuiTypography-root"
-       >
-         Editor
-       </aside>
-     </header>
-     <img
-       alt="DSC07717"
-       class="css-1f8yvym-ImageWrapper-Author e1shv2yg0"
-       loading="lazy"
-       srcset="https://unsplash.it/800/400 800w,
- https://unsplash.it/500/300 500w,
- https://unsplash.it/300/200 300w,
- https://unsplash.it/200/100 200w"
-       title=""
-     />
-     <aside
-       class="css-xraw1t-AuthorLinksWrapper e18ssx8j0"
-     >
-       <a
-         class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways css-1xylxj1-MuiTypography-root-MuiLink-root"
-         href="https://twitter.com"
-         target="__blank"
-       >
-         Twitter
-       </a>
-       <a
-         class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways css-1xylxj1-MuiTypography-root-MuiLink-root"
-         href="https://facebook.com"
-         target="__blank"
-       >
-         Facebook
-       </a>
-       <a
-         class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways css-1xylxj1-MuiTypography-root-MuiLink-root"
-         href="https://instagram.com"
-         target="__blank"
-       >
-         Instagram
-       </a>
-     </aside>
-     <div
-       class="css-1v4yto8-RichTextBlockWrapper eu4zjs90"
-     >
-       <div
-         data-gramm="false"
-         data-slate-editor="true"
-         data-slate-node="value"
-         style="outline: none; white-space: pre-wrap; word-wrap: break-word;"
-       >
-         <h2
-           class="MuiTypography-root MuiTypography-h4 css-5lbw0b-MuiTypography-root"
-           data-slate-node="element"
-         >
-           <span
-             data-slate-node="text"
-           >
-             <span
-               data-slate-string="true"
-             >
-               Title
-             </span>
-           </span>
-         </h2>
-         <h3
-           class="MuiTypography-root MuiTypography-h5 css-ag7rrr-MuiTypography-root"
-           data-slate-node="element"
-         >
-           <span
-             data-slate-node="text"
-           >
-             <span
-               data-slate-string="true"
-             >
-               Title 2
-             </span>
-           </span>
-         </h3>
-         <h4
-           class="MuiTypography-root MuiTypography-h6 css-2ulfj5-MuiTypography-root"
-           data-slate-node="element"
-         >
-           <span
-             data-slate-node="text"
-           >
-             <span
-               data-slate-string="true"
-             >
-               Title 3
-             </span>
-           </span>
-         </h4>
-         <ul
-           data-slate-node="element"
-         >
-           <li
-             data-slate-node="element"
-           >
-             <span
-               data-slate-node="text"
-             >
-               <span
-                 data-slate-string="true"
-               >
-                 Unordered List
-               </span>
-             </span>
-           </li>
-         </ul>
-         <ol
-           data-slate-node="element"
-         >
-           <li
-             data-slate-node="element"
-           >
-             <span
-               data-slate-node="text"
-             >
-               <span
-                 data-slate-string="true"
-               >
-                 Ordered List
-               </span>
-             </span>
-           </li>
-         </ol>
-         <p
-           class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom css-d3wcwz-MuiTypography-root"
-           data-slate-node="element"
-         >
-           <span
-             data-slate-node="text"
-           >
-             <span
-               data-slate-length="0"
-               data-slate-zero-width="n"
-             >
-               ﻿
-               <br />
-             </span>
-           </span>
-         </p>
-         <table
-           class="css-o38l6f-tableStyles"
-         >
-           <tbody
-             data-slate-node="element"
-           >
-             <tr
-               data-slate-node="element"
-             >
-               <td
-                 class="css-1suggax-tableCellStyles"
-                 data-slate-node="element"
-               >
-                 <p
-                   class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom css-d3wcwz-MuiTypography-root"
-                   data-slate-node="element"
-                 >
-                   <span
-                     data-slate-node="text"
-                   >
-                     <span
-                       data-slate-string="true"
-                     >
-                       Table Cell 1
-                     </span>
-                   </span>
-                 </p>
-               </td>
-               <td
-                 class="css-1suggax-tableCellStyles"
-                 data-slate-node="element"
-               >
-                 <p
-                   class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom css-d3wcwz-MuiTypography-root"
-                   data-slate-node="element"
-                 >
-                   <span
-                     data-slate-node="text"
-                   >
-                     <span
-                       data-slate-string="true"
-                     >
-                       Table Cell 2
-                     </span>
-                   </span>
-                 </p>
-               </td>
-             </tr>
-             <tr
-               data-slate-node="element"
-             >
-               <td
-                 class="css-1suggax-tableCellStyles"
-                 data-slate-node="element"
-               >
-                 <p
-                   class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom css-d3wcwz-MuiTypography-root"
-                   data-slate-node="element"
-                 >
-                   <span
-                     data-slate-node="text"
-                   >
-                     <span
-                       data-slate-string="true"
-                     >
-                       Table Cell 3
-                     </span>
-                   </span>
-                 </p>
-               </td>
-               <td
-                 class="css-1suggax-tableCellStyles"
-                 data-slate-node="element"
-               >
-                 <p
-                   class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom css-d3wcwz-MuiTypography-root"
-                   data-slate-node="element"
-                 >
-                   <span
-                     data-slate-node="text"
-                   >
-                     <span
-                       data-slate-string="true"
-                     >
-                       Table Cell 4
-                     </span>
-                   </span>
-                 </p>
-               </td>
-             </tr>
-           </tbody>
-         </table>
-         <p
-           class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom css-d3wcwz-MuiTypography-root"
-           data-slate-node="element"
-         >
-           <span
-             data-slate-node="text"
-           >
-             <span
-               data-slate-string="true"
-             >
-               Normal text,
-             </span>
-           </span>
-           <span
-             data-slate-node="text"
-           >
-             <strong
-               data-slate-leaf="true"
-             >
-               <span
-                 data-slate-string="true"
-               >
-                  Bold
-               </span>
-             </strong>
-           </span>
-           <span
-             data-slate-node="text"
-           >
-             <span
-               data-slate-string="true"
-             >
-               , 
-             </span>
-           </span>
-           <span
-             data-slate-node="text"
-           >
-             <em
-               data-slate-leaf="true"
-             >
-               <span
-                 data-slate-string="true"
-               >
-                 Italic
-               </span>
-             </em>
-           </span>
-           <span
-             data-slate-node="text"
-           >
-             <span
-               data-slate-string="true"
-             >
-               , 
-             </span>
-           </span>
-           <span
-             data-slate-node="text"
-           >
-             <u
-               data-slate-leaf="true"
-             >
-               <span
-                 data-slate-string="true"
-               >
-                 Underline
-               </span>
-             </u>
-           </span>
-           <span
-             data-slate-node="text"
-           >
-             <span
-               data-slate-string="true"
-             >
-               , 
-             </span>
-           </span>
-           <span
-             data-slate-node="text"
-           >
-             <del
-               data-slate-leaf="true"
-             >
-               <span
-                 data-slate-string="true"
-               >
-                 Strikethrough
-               </span>
-             </del>
-           </span>
-           <span
-             data-slate-node="text"
-           >
-             <span
-               data-slate-string="true"
-             >
-               , 
-             </span>
-           </span>
-           <span
-             data-slate-node="text"
-           >
-             <sup
-               data-slate-leaf="true"
-             >
-               <span
-                 data-slate-string="true"
-               >
-                 Sup
-               </span>
-             </sup>
-           </span>
-           <span
-             data-slate-node="text"
-           >
-             <span
-               data-slate-string="true"
-             >
-               , 
-             </span>
-           </span>
-           <span
-             data-slate-node="text"
-           >
-             <sub
-               data-slate-leaf="true"
-             >
-               <span
-                 data-slate-string="true"
-               >
-                 Sub
-               </span>
-             </sub>
-           </span>
-           <span
-             data-slate-node="text"
-           >
-             <span
-               data-slate-string="true"
-             >
-               , 
-             </span>
-           </span>
-           <a
-             class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways css-1xylxj1-MuiTypography-root-MuiLink-root"
-             data-slate-node="element"
-             href="https://google.com"
-             rel="noreferrer"
-             target="_blank"
-             title="Link"
-           >
-             <span
-               data-slate-node="text"
-             >
-               <span
-                 data-slate-string="true"
-               >
-                 Link
-               </span>
-             </span>
-           </a>
-           <span
-             data-slate-node="text"
-           >
-             <span
-               data-slate-string="true"
-             >
-               , 😀
-             </span>
-           </span>
-         </p>
-       </div>
-     </div>
-   </article>
- </DocumentFragment>
+ <DocumentFragment />"
`;

exports[`Author should render WithLoading 1`] = `
"Snapshot Diff:
- First value
+ Second value

- <DocumentFragment>
-   <article
-     class="css-15it3wn-AuthorWrapper e18ssx8j1"
-   >
-     <header>
-       <h1
-         class="MuiTypography-root MuiTypography-h3 css-gepadz-MuiTypography-root"
-       >
-         Foobar
-       </h1>
-       <aside
-         class="MuiTypography-root MuiTypography-h5 css-ag7rrr-MuiTypography-root"
-       >
-         Editor
-       </aside>
-     </header>
-     <img
-       alt="DSC07717"
-       class="css-1f8yvym-ImageWrapper-Author e1shv2yg0"
-       loading="lazy"
-       srcset="https://unsplash.it/800/400 800w,
- https://unsplash.it/500/300 500w,
- https://unsplash.it/300/200 300w,
- https://unsplash.it/200/100 200w"
-       title=""
-     />
-     <aside
-       class="css-xraw1t-AuthorLinksWrapper e18ssx8j0"
-     >
-       <a
-         class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways css-1xylxj1-MuiTypography-root-MuiLink-root"
-         href="https://twitter.com"
-         target="__blank"
-       >
-         Twitter
-       </a>
-       <a
-         class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways css-1xylxj1-MuiTypography-root-MuiLink-root"
-         href="https://facebook.com"
-         target="__blank"
-       >
-         Facebook
-       </a>
-       <a
-         class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways css-1xylxj1-MuiTypography-root-MuiLink-root"
-         href="https://instagram.com"
-         target="__blank"
-       >
-         Instagram
-       </a>
-     </aside>
-     <div
-       class="css-1v4yto8-RichTextBlockWrapper eu4zjs90"
-     >
-       <div
-         data-gramm="false"
-         data-slate-editor="true"
-         data-slate-node="value"
-         style="outline: none; white-space: pre-wrap; word-wrap: break-word;"
-       >
-         <h2
-           class="MuiTypography-root MuiTypography-h4 css-5lbw0b-MuiTypography-root"
-           data-slate-node="element"
-         >
-           <span
-             data-slate-node="text"
-           >
-             <span
-               data-slate-string="true"
-             >
-               Title
-             </span>
-           </span>
-         </h2>
-         <h3
-           class="MuiTypography-root MuiTypography-h5 css-ag7rrr-MuiTypography-root"
-           data-slate-node="element"
-         >
-           <span
-             data-slate-node="text"
-           >
-             <span
-               data-slate-string="true"
-             >
-               Title 2
-             </span>
-           </span>
-         </h3>
-         <h4
-           class="MuiTypography-root MuiTypography-h6 css-2ulfj5-MuiTypography-root"
-           data-slate-node="element"
-         >
-           <span
-             data-slate-node="text"
-           >
-             <span
-               data-slate-string="true"
-             >
-               Title 3
-             </span>
-           </span>
-         </h4>
-         <ul
-           data-slate-node="element"
-         >
-           <li
-             data-slate-node="element"
-           >
-             <span
-               data-slate-node="text"
-             >
-               <span
-                 data-slate-string="true"
-               >
-                 Unordered List
-               </span>
-             </span>
-           </li>
-         </ul>
-         <ol
-           data-slate-node="element"
-         >
-           <li
-             data-slate-node="element"
-           >
-             <span
-               data-slate-node="text"
-             >
-               <span
-                 data-slate-string="true"
-               >
-                 Ordered List
-               </span>
-             </span>
-           </li>
-         </ol>
-         <p
-           class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom css-d3wcwz-MuiTypography-root"
-           data-slate-node="element"
-         >
-           <span
-             data-slate-node="text"
-           >
-             <span
-               data-slate-length="0"
-               data-slate-zero-width="n"
-             >
-               ﻿
-               <br />
-             </span>
-           </span>
-         </p>
-         <table
-           class="css-o38l6f-tableStyles"
-         >
-           <tbody
-             data-slate-node="element"
-           >
-             <tr
-               data-slate-node="element"
-             >
-               <td
-                 class="css-1suggax-tableCellStyles"
-                 data-slate-node="element"
-               >
-                 <p
-                   class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom css-d3wcwz-MuiTypography-root"
-                   data-slate-node="element"
-                 >
-                   <span
-                     data-slate-node="text"
-                   >
-                     <span
-                       data-slate-string="true"
-                     >
-                       Table Cell 1
-                     </span>
-                   </span>
-                 </p>
-               </td>
-               <td
-                 class="css-1suggax-tableCellStyles"
-                 data-slate-node="element"
-               >
-                 <p
-                   class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom css-d3wcwz-MuiTypography-root"
-                   data-slate-node="element"
-                 >
-                   <span
-                     data-slate-node="text"
-                   >
-                     <span
-                       data-slate-string="true"
-                     >
-                       Table Cell 2
-                     </span>
-                   </span>
-                 </p>
-               </td>
-             </tr>
-             <tr
-               data-slate-node="element"
-             >
-               <td
-                 class="css-1suggax-tableCellStyles"
-                 data-slate-node="element"
-               >
-                 <p
-                   class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom css-d3wcwz-MuiTypography-root"
-                   data-slate-node="element"
-                 >
-                   <span
-                     data-slate-node="text"
-                   >
-                     <span
-                       data-slate-string="true"
-                     >
-                       Table Cell 3
-                     </span>
-                   </span>
-                 </p>
-               </td>
-               <td
-                 class="css-1suggax-tableCellStyles"
-                 data-slate-node="element"
-               >
-                 <p
-                   class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom css-d3wcwz-MuiTypography-root"
-                   data-slate-node="element"
-                 >
-                   <span
-                     data-slate-node="text"
-                   >
-                     <span
-                       data-slate-string="true"
-                     >
-                       Table Cell 4
-                     </span>
-                   </span>
-                 </p>
-               </td>
-             </tr>
-           </tbody>
-         </table>
-         <p
-           class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom css-d3wcwz-MuiTypography-root"
-           data-slate-node="element"
-         >
-           <span
-             data-slate-node="text"
-           >
-             <span
-               data-slate-string="true"
-             >
-               Normal text,
-             </span>
-           </span>
-           <span
-             data-slate-node="text"
-           >
-             <strong
-               data-slate-leaf="true"
-             >
-               <span
-                 data-slate-string="true"
-               >
-                  Bold
-               </span>
-             </strong>
-           </span>
-           <span
-             data-slate-node="text"
-           >
-             <span
-               data-slate-string="true"
-             >
-               , 
-             </span>
-           </span>
-           <span
-             data-slate-node="text"
-           >
-             <em
-               data-slate-leaf="true"
-             >
-               <span
-                 data-slate-string="true"
-               >
-                 Italic
-               </span>
-             </em>
-           </span>
-           <span
-             data-slate-node="text"
-           >
-             <span
-               data-slate-string="true"
-             >
-               , 
-             </span>
-           </span>
-           <span
-             data-slate-node="text"
-           >
-             <u
-               data-slate-leaf="true"
-             >
-               <span
-                 data-slate-string="true"
-               >
-                 Underline
-               </span>
-             </u>
-           </span>
-           <span
-             data-slate-node="text"
-           >
-             <span
-               data-slate-string="true"
-             >
-               , 
-             </span>
-           </span>
-           <span
-             data-slate-node="text"
-           >
-             <del
-               data-slate-leaf="true"
-             >
-               <span
-                 data-slate-string="true"
-               >
-                 Strikethrough
-               </span>
-             </del>
-           </span>
-           <span
-             data-slate-node="text"
-           >
-             <span
-               data-slate-string="true"
-             >
-               , 
-             </span>
-           </span>
-           <span
-             data-slate-node="text"
-           >
-             <sup
-               data-slate-leaf="true"
-             >
-               <span
-                 data-slate-string="true"
-               >
-                 Sup
-               </span>
-             </sup>
-           </span>
-           <span
-             data-slate-node="text"
-           >
-             <span
-               data-slate-string="true"
-             >
-               , 
-             </span>
-           </span>
-           <span
-             data-slate-node="text"
-           >
-             <sub
-               data-slate-leaf="true"
-             >
-               <span
-                 data-slate-string="true"
-               >
-                 Sub
-               </span>
-             </sub>
-           </span>
-           <span
-             data-slate-node="text"
-           >
-             <span
-               data-slate-string="true"
-             >
-               , 
-             </span>
-           </span>
-           <a
-             class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways css-1xylxj1-MuiTypography-root-MuiLink-root"
-             data-slate-node="element"
-             href="https://google.com"
-             rel="noreferrer"
-             target="_blank"
-             title="Link"
-           >
-             <span
-               data-slate-node="text"
-             >
-               <span
-                 data-slate-string="true"
-               >
-                 Link
-               </span>
-             </span>
-           </a>
-           <span
-             data-slate-node="text"
-           >
-             <span
-               data-slate-string="true"
-             >
-               , 😀
-             </span>
-           </span>
-         </p>
-       </div>
-     </div>
-   </article>
- </DocumentFragment>
+ <DocumentFragment />"
`;

exports[`Author should render WithoutBio 1`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -55,367 +55,9 @@
        <div
          data-gramm="false"
          data-slate-editor="true"
          data-slate-node="value"
          style="outline: none; white-space: pre-wrap; word-wrap: break-word;"
-       >
-         <h2
-           class="MuiTypography-root MuiTypography-h4 css-5lbw0b-MuiTypography-root"
-           data-slate-node="element"
-         >
-           <span
-             data-slate-node="text"
-           >
-             <span
-               data-slate-string="true"
-             >
-               Title
-             </span>
-           </span>
-         </h2>
-         <h3
-           class="MuiTypography-root MuiTypography-h5 css-ag7rrr-MuiTypography-root"
-           data-slate-node="element"
-         >
-           <span
-             data-slate-node="text"
-           >
-             <span
-               data-slate-string="true"
-             >
-               Title 2
-             </span>
-           </span>
-         </h3>
-         <h4
-           class="MuiTypography-root MuiTypography-h6 css-2ulfj5-MuiTypography-root"
-           data-slate-node="element"
-         >
-           <span
-             data-slate-node="text"
-           >
-             <span
-               data-slate-string="true"
-             >
-               Title 3
-             </span>
-           </span>
-         </h4>
-         <ul
-           data-slate-node="element"
-         >
-           <li
-             data-slate-node="element"
-           >
-             <span
-               data-slate-node="text"
-             >
-               <span
-                 data-slate-string="true"
-               >
-                 Unordered List
-               </span>
-             </span>
-           </li>
-         </ul>
-         <ol
-           data-slate-node="element"
-         >
-           <li
-             data-slate-node="element"
-           >
-             <span
-               data-slate-node="text"
-             >
-               <span
-                 data-slate-string="true"
-               >
-                 Ordered List
-               </span>
-             </span>
-           </li>
-         </ol>
-         <p
-           class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom css-d3wcwz-MuiTypography-root"
-           data-slate-node="element"
-         >
-           <span
-             data-slate-node="text"
-           >
-             <span
-               data-slate-length="0"
-               data-slate-zero-width="n"
-             >
-               ﻿
-               <br />
-             </span>
-           </span>
-         </p>
-         <table
-           class="css-o38l6f-tableStyles"
-         >
-           <tbody
-             data-slate-node="element"
-           >
-             <tr
-               data-slate-node="element"
-             >
-               <td
-                 class="css-1suggax-tableCellStyles"
-                 data-slate-node="element"
-               >
-                 <p
-                   class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom css-d3wcwz-MuiTypography-root"
-                   data-slate-node="element"
-                 >
-                   <span
-                     data-slate-node="text"
-                   >
-                     <span
-                       data-slate-string="true"
-                     >
-                       Table Cell 1
-                     </span>
-                   </span>
-                 </p>
-               </td>
-               <td
-                 class="css-1suggax-tableCellStyles"
-                 data-slate-node="element"
-               >
-                 <p
-                   class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom css-d3wcwz-MuiTypography-root"
-                   data-slate-node="element"
-                 >
-                   <span
-                     data-slate-node="text"
-                   >
-                     <span
-                       data-slate-string="true"
-                     >
-                       Table Cell 2
-                     </span>
-                   </span>
-                 </p>
-               </td>
-             </tr>
-             <tr
-               data-slate-node="element"
-             >
-               <td
-                 class="css-1suggax-tableCellStyles"
-                 data-slate-node="element"
-               >
-                 <p
-                   class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom css-d3wcwz-MuiTypography-root"
-                   data-slate-node="element"
-                 >
-                   <span
-                     data-slate-node="text"
-                   >
-                     <span
-                       data-slate-string="true"
-                     >
-                       Table Cell 3
-                     </span>
-                   </span>
-                 </p>
-               </td>
-               <td
-                 class="css-1suggax-tableCellStyles"
-                 data-slate-node="element"
-               >
-                 <p
-                   class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom css-d3wcwz-MuiTypography-root"
-                   data-slate-node="element"
-                 >
-                   <span
-                     data-slate-node="text"
-                   >
-                     <span
-                       data-slate-string="true"
-                     >
-                       Table Cell 4
-                     </span>
-                   </span>
-                 </p>
-               </td>
-             </tr>
-           </tbody>
-         </table>
-         <p
-           class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom css-d3wcwz-MuiTypography-root"
-           data-slate-node="element"
-         >
-           <span
-             data-slate-node="text"
-           >
-             <span
-               data-slate-string="true"
-             >
-               Normal text,
-             </span>
-           </span>
-           <span
-             data-slate-node="text"
-           >
-             <strong
-               data-slate-leaf="true"
-             >
-               <span
-                 data-slate-string="true"
-               >
-                  Bold
-               </span>
-             </strong>
-           </span>
-           <span
-             data-slate-node="text"
-           >
-             <span
-               data-slate-string="true"
-             >
-               , 
-             </span>
-           </span>
-           <span
-             data-slate-node="text"
-           >
-             <em
-               data-slate-leaf="true"
-             >
-               <span
-                 data-slate-string="true"
-               >
-                 Italic
-               </span>
-             </em>
-           </span>
-           <span
-             data-slate-node="text"
-           >
-             <span
-               data-slate-string="true"
-             >
-               , 
-             </span>
-           </span>
-           <span
-             data-slate-node="text"
-           >
-             <u
-               data-slate-leaf="true"
-             >
-               <span
-                 data-slate-string="true"
-               >
-                 Underline
-               </span>
-             </u>
-           </span>
-           <span
-             data-slate-node="text"
-           >
-             <span
-               data-slate-string="true"
-             >
-               , 
-             </span>
-           </span>
-           <span
-             data-slate-node="text"
-           >
-             <del
-               data-slate-leaf="true"
-             >
-               <span
-                 data-slate-string="true"
-               >
-                 Strikethrough
-               </span>
-             </del>
-           </span>
-           <span
-             data-slate-node="text"
-           >
-             <span
-               data-slate-string="true"
-             >
-               , 
-             </span>
-           </span>
-           <span
-             data-slate-node="text"
-           >
-             <sup
-               data-slate-leaf="true"
-             >
-               <span
-                 data-slate-string="true"
-               >
-                 Sup
-               </span>
-             </sup>
-           </span>
-           <span
-             data-slate-node="text"
-           >
-             <span
-               data-slate-string="true"
-             >
-               , 
-             </span>
-           </span>
-           <span
-             data-slate-node="text"
-           >
-             <sub
-               data-slate-leaf="true"
-             >
-               <span
-                 data-slate-string="true"
-               >
-                 Sub
-               </span>
-             </sub>
-           </span>
-           <span
-             data-slate-node="text"
-           >
-             <span
-               data-slate-string="true"
-             >
-               , 
-             </span>
-           </span>
-           <a
-             class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways css-1xylxj1-MuiTypography-root-MuiLink-root"
-             data-slate-node="element"
-             href="https://google.com"
-             rel="noreferrer"
-             target="_blank"
-             title="Link"
-           >
-             <span
-               data-slate-node="text"
-             >
-               <span
-                 data-slate-string="true"
-               >
-                 Link
-               </span>
-             </span>
-           </a>
-           <span
-             data-slate-node="text"
-           >
-             <span
-               data-slate-string="true"
-             >
-               , 😀
-             </span>
-           </span>
-         </p>
-       </div>
+       />
      </div>
    </article>
  </DocumentFragment>"
`;

exports[`Author should render WithoutImage 1`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -12,20 +12,10 @@
          class="MuiTypography-root MuiTypography-h5 css-ag7rrr-MuiTypography-root"
        >
          Editor
        </aside>
      </header>
-     <img
-       alt="DSC07717"
-       class="css-1f8yvym-ImageWrapper-Author e1shv2yg0"
-       loading="lazy"
-       srcset="https://unsplash.it/800/400 800w,
- https://unsplash.it/500/300 500w,
- https://unsplash.it/300/200 300w,
- https://unsplash.it/200/100 200w"
-       title=""
-     />
      <aside
        class="css-xraw1t-AuthorLinksWrapper e18ssx8j0"
      >
        <a
          class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways css-1xylxj1-MuiTypography-root-MuiLink-root""
`;

exports[`Author should render WithoutJobTitle 1`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -6,15 +6,10 @@
        <h1
          class="MuiTypography-root MuiTypography-h3 css-gepadz-MuiTypography-root"
        >
          Foobar
        </h1>
-       <aside
-         class="MuiTypography-root MuiTypography-h5 css-ag7rrr-MuiTypography-root"
-       >
-         Editor
-       </aside>
      </header>
      <img
        alt="DSC07717"
        class="css-1f8yvym-ImageWrapper-Author e1shv2yg0"
        loading="lazy""
`;

exports[`Author should render WithoutLinks 1`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -22,35 +22,10 @@
  https://unsplash.it/500/300 500w,
  https://unsplash.it/300/200 300w,
  https://unsplash.it/200/100 200w"
        title=""
      />
-     <aside
-       class="css-xraw1t-AuthorLinksWrapper e18ssx8j0"
-     >
-       <a
-         class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways css-1xylxj1-MuiTypography-root-MuiLink-root"
-         href="https://twitter.com"
-         target="__blank"
-       >
-         Twitter
-       </a>
-       <a
-         class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways css-1xylxj1-MuiTypography-root-MuiLink-root"
-         href="https://facebook.com"
-         target="__blank"
-       >
-         Facebook
-       </a>
-       <a
-         class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways css-1xylxj1-MuiTypography-root-MuiLink-root"
-         href="https://instagram.com"
-         target="__blank"
-       >
-         Instagram
-       </a>
-     </aside>
      <div
        class="css-1v4yto8-RichTextBlockWrapper eu4zjs90"
      >
        <div
          data-gramm="false""
`;
